add scripts.js & style.css

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <title>Warsztat samochodowy Kraków</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>Warsztat samochodowy Kraków</title>
 </head>
 
 <body>
@@ -23,6 +23,7 @@
             <h2>Lorem, ipsum dolor.</h2>
         </section>
     </main>
+    <link rel="stylesheet" href="js/script.js">
 </body>
 
 </html>
