--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <h1>Warsztat samochodowy w Krakowie</h1>
-        <a href="#">Dalej</a>
+        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Dalej</a>
     </header>
     <main>
         <section>
