--- a/index.html
+++ b/index.html
@@ -7,23 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <title>Warsztat samochodowy Kraków</title>
+    
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/scripts.js" defer></script>
+    <title>Warsztat samochodowy Kraków</title>
 </head>
 
 <body>
     <header>
         <h1>Warsztat samochodowy w Krakowie</h1>
-        <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Dalej</a>
+        <a>Dalej</a>
     </header>
     <main>
         <section>
             <h2>Lorem, ipsum dolor.</h2>
         </section>
     </main>
-    <link rel="stylesheet" href="js/script.js">
 </body>
 
 </html>
